# pr-fixer

./: README.md  package.json  plan.md  pyproject.toml  requirements.md
pr_fixer/: __init__.py  claude.py  cli.py  dependencies.py  git.py  github.py  models.py
src/: claude.ts  github.ts  index.ts  parser.ts  types.ts
tests/: __init__.py  test_git.py  test_github.py  test_integration.py
