[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-fixer"
version = "0.1.0"
description = "A CLI tool that automates addressing PR review comments using Claude AI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Bob Ren"}
]
keywords = ["github", "pull-request", "code-review", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "ghstack",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pr-fixer = "pr_fixer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pr_fixer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_claude: marks tests that require claude CLI",
]
